# CaruTrack

./: Crear_usuario.py  config.py  estructura.txt  pyproject.toml  reestructurar-limpio.ps1  reestructurar.ps1  requirements.txt
app/: __init__.py
app/models/: HistorialSolicitud.py  SolicitudSubvencion.py  __init__.py  create_tablas.py  db.py  entidad.py  historial_solicitud.py  red.py  solicitud.py  solicitud_subvencion.py  usuario.py
app/routes/: __init__.py  routes_auth.py  routes_entidades.py  routes_main.py  routes_redes.py  routes_solicitud_subvencion.py  routes_solicitudes.py  routes_subvenciones.py  routes_usuarios.py
app/templates/: base.html  index.html
app/templates/auth/: login.html
app/templates/solicitudes/: listar.html
app/templates/usuarios/: editar.html  listar.html
gestion_subvenciones/: .env  README.md  config.py  crear_plantillas.ps1  crear_usuario.py  requeriments.txt  requirements.txt  run.py  test_contexto.py
gestion_subvenciones/app/: __init__.py  app.py  config.py  models.py  routes.py  routes_entidades.py  routes_solicitudes.py  routes_usuarios.py
gestion_subvenciones/app/models/: __init__.py  _init_.py  entidad.py  solicitud.py  subvencion.py  subvencion_denegada.py  usuario.py
gestion_subvenciones/app/routes/: __init__.py  routes_entidades.py  routes_solicitudes.py  (+1 more)
gestion_subvenciones/controllers/: grant_controller.py
gestion_subvenciones/instance/: subvenciones.db
gestion_subvenciones/models/: __init__.py  grant.py
gestion_subvenciones/routes/: grant_routes.py  routes_entidades.py  routes_solicitudes.py
(+47 files in other folders)
